# diigo-tagger-ai

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  setup_shell.sh
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 111605f46b18_add_parent_id_to_tags_table.py  1417f381fcd1_initial_schema_with_fts5.py  3f8f2267e2d3_add_bookmark_model_and_bookmark_tags_.py
diigo_tagger/: __init__.py  constants.py  db.py  models.py  security.py
diigo_tagger/api/: __init__.py  diigo_client.py  main.py  openai_client.py
diigo_tagger/api/routes/: __init__.py  bookmarks.py  health.py
diigo_tagger/api/schemas/: __init__.py  bookmark.py
diigo_tagger/cli/: __init__.py  add_form.py  main.py
diigo_tagger/clients/: diigo_client.py  llm_router.py  metadata_fetcher.py  openai_client.py
diigo_tagger/services/: __init__.py  bookmark_service.py  metadata_tag_detector.py  query_parser.py  settings_service.py  tag_hierarchy.py  tag_reconciliation.py  tag_service.py
diigo_tagger/web/: __init__.py
diigo_tagger/web/templates/: add_bookmark.html  add_placeholder.html  base.html  help.html  help_database.html  help_index.html  help_search.html  index.html  sync.html  tag_bulk.html  tag_hierarchy.html  tag_merge.html  tag_suggestions.html  tags.html  tags_placeholder.html
diigo_tagger/web/templates/partials/: tag_cloud.html
docs/: ARCHITECTURE_DESIGN.md  DEVELOPER-GUIDE.md  USER-GUIDE.md  database-operations.md
docs/features/diigo-cli-llm-assisted/: 01-bsa-analysis.md
docs/features/diigo-tagger-ai/: 01-bsa-analysis.md  02-architecture-design.md  03-data-engineering-plan.md  04-security-audit.md  05-user-documentation.md  06-test-plan.md  07-release-plan.md
docs/plans/: 2026-04-24_cli-wrapper-and-vercel-deploy-plan.md  2026-04-24_cli-wrapper-and-vercel-deploy.md  2026-04-25_smart-tagging-metadata-fields-plan.md  2026-04-25_smart-tagging-metadata-fields.md  2026-05-02_bookmark-add-confirmation.md  2026-05-02_fix-metadata-fetch-fallback.md  2026-05-06_open-source-and-marketing.md  PRE_WORK_TEST_COVERAGE.md  REST_API_DESIGN.md  SECURITY_AUDIT.md  WEB_UI_PLAN.md
scripts/: drop_and_recreate_db.sh  install.sh  migrate_created_dates.py
tests/integration/: test_api_autocomplete.py  test_api_bookmarks.py  test_api_health.py
tests/unit/: test_add_form.py  test_api_clients.py  test_bookmark_service.py  test_cli.py  test_cli_help.py  test_cli_server.py  test_db_init.py  test_llm_router.py  test_metadata_fetcher.py  test_metadata_tag_detector.py  test_query_parser.py  test_related_bookmarks.py  test_security.py  test_settings_service.py  test_tag_bulk_api.py  test_tag_cloud.py  test_tag_hierarchy.py  test_tag_hierarchy_api.py  test_tag_merge_api.py  test_tag_model.py  test_tag_reconciliation.py  test_tag_service.py  test_tag_similarity.py  test_tag_statistics.py  test_tag_suggestions_api.py
