[tool.poetry]
name = "diigo-tagger-ai"
version = "1.0.0"
description = "AI-powered bookmark management for Diigo — smart tagging, similarity matching, and category inference"
authors = ["Brooke Smith <2556595+oehm-smith@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/AI-bbos/diigo-tagger-ai"
repository = "https://github.com/AI-bbos/diigo-tagger-ai"
keywords = ["diigo", "bookmarks", "tagging", "ai", "llm", "cli"]
packages = [{include = "diigo_tagger"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
alembic = "^1.12"
click = "^8.1"
platformdirs = "^4.5.0"
python-dotenv = "^1.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
yt-dlp = "^2024.11"
langchain = "^0.1"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.0.1"
langchain-google-genai = "^0.0.1"
openai = "^1.3"
sentence-transformers = "^2.2"
tiktoken = "^0.5"
rich = "^13.5"
numpy = "^1.24"
# Web framework
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
jinja2 = "^3.1"
python-multipart = "^0.0.6"
# Query parsing
luqum = "^0.13"
# Rate limiting (security)
slowapi = "^0.1.9"
# Interactive CLI prompts
prompt-toolkit = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.9"
ruff = "^0.1"
mypy = "^1.5"
httpx = "^0.25"  # For testing FastAPI

[tool.poetry.scripts]
diigo = "diigo_tagger.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=diigo_tagger --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
